Sponsors dinamicos y enlace agenda inglés

--- a/src/app/demo/view/sponsors.component.html
+++ b/src/app/demo/view/sponsors.component.html
@@ -1,5 +1,5 @@
 <div class="grid p-fluid">
-	<div class="col-12">
+	<div class="col-12" *ngIf="versponsors0">
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
                 <div class="col-12 title">
@@ -19,7 +19,7 @@
 			</div>
 		</div>		
 	</div>
-	<div class="col-12">
+	<div class="col-12" *ngIf="versponsorsoro">
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
                 <div class="col-12 title">
@@ -39,7 +39,7 @@
 			</div>
 		</div>		
 	</div>
-	<div class="col-12">
+	<div class="col-12" *ngIf="versponsors2">
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
                 <div class="col-12 title">
@@ -59,7 +59,7 @@
 			</div>
 		</div>		
 	</div>	
-	<div class="col-12">
+	<div class="col-12" *ngIf="versponsors1">
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
                 <div class="col-12 title">
@@ -79,7 +79,7 @@
 			</div>
 		</div>		
 	</div>
-	<div class="col-12">
+	<div class="col-12" *ngIf="versponsors3">
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
                 <div class="col-12 title">
@@ -99,7 +99,7 @@
 			</div>
 		</div>		
 	</div>
-	<div class="col-12">
+	<div class="col-12" *ngIf="versponsorsapoya">
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
                 <div class="col-12 title">
