--- a/src/app/demo/view/agenda.component.html
+++ b/src/app/demo/view/agenda.component.html
@@ -1,6 +1,10 @@
 <div class="grid p-fluid">
     <div class="col-12">
 		<div class="text-center" style="color:#00A79D;">
+			<h6><a href="https://www.hidrogenocolombia.com/wp-content/uploads/2024/03/AGENDA-3°-INTERNATIONAL-HYDROGEN-CONGRESS-V4.pdf" target="_blank" style="color:#3CCA00;">Versión en Inglés</a></h6>
+		</div>	
+		<hr>
+		<div class="text-center" style="color:#00A79D;">
 			<h6><a href="#/pages/agenda/1" style="color:#00A79D;">Abril 9</a>  |  <a href="#/pages/agenda/2" style="color:#00A79D;">Abril 10</a>  |  <a href="#/pages/agenda/3" style="color:#00A79D;">Abril 11</a></h6>
 		</div>
         <div class="card">
