--- a/src/app/demo/view/sponsors-view/sponsors-view.component.html
+++ b/src/app/demo/view/sponsors-view/sponsors-view.component.html
@@ -35,7 +35,7 @@
                                 <span><h6>Contacto</h6><p>{{ persona.spo_contacto }}</p></span><br>
                                 <span><h6>E-mail</h6><p>{{ persona.spo_correo }}</p></span><br>
 								<span><h6>Telefono</h6><p>{{ persona.spo_telefono }}</p></span><br>
-								<span><h6>WEB</h6> {{persona.spo_web}}</span><br>
+								<span><h6>WEB</h6><a href=" {{persona.spo_web}}" target="_blank">{{persona.spo_web}}</a></span><br>
 							</div>
                         </div>	
 					</div>													
