Info adicional personas

--- a/src/app/demo/view/participantes.component.html
+++ b/src/app/demo/view/participantes.component.html
@@ -22,7 +22,7 @@
 											<td>
 												<a style="color: black;" (click)="irAPaginaDestino(persona.per_id)">
 													<h5>{{persona.per_nombre}}</h5>
-													<span><small>{{persona.per_cargo}}</small></span>	
+													<span><small>{{persona.per_cargo}} - {{persona.per_empresa}}</small></span>	
 												</a>											
 											</td>
 										</tr>
