--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -747,7 +747,7 @@
                                 <!-- List Group Item Start -->
                                 <li class="list-group-item" *ngFor="let userSponsor of users_contacts_sponsors  | filterContacts:searchText">
                                     <div class="media">
-                                        <div class="avatar bg-success text-light" [ngClass]="{'avatar-busy': !userSponsor.is_active, 'avatar-online': userSponsor.is_active}">
+                                        <div class="avatar mr-2 bg-success text-light" [ngClass]="{'avatar-busy': !userSponsor.is_active, 'avatar-online': userSponsor.is_active}">
                                             <img src={{path}}{{userSponsor.avatar}} alt="">
                                             
                                         </div>
@@ -843,18 +843,18 @@
                                 <!-- List Group Item Start  iniciar chat-->
                                 <li class="list-group-item" *ngFor="let userst of users_contacts  | filterContacts:searchText"> 
                                     <div class="media">
-                                        <div class="avatar bg-success text-light" [ngClass]="{'avatar-busy': !userst.is_active, 'avatar-online': userst.is_active}">
+                                        <div class="avatar bg-success text-light mr-2" [ngClass]="{'avatar-busy': !userst.is_active, 'avatar-online': userst.is_active}">
                                             <img src={{path}}{{userst.avatar}} alt="">
                                           
                                         </div>
 
                                         <div class="media-body">
                                             <h6 class="text-truncate">
-                                                <a style="cursor: pointer;" (click)="startChat(userst.id)" class="text-reset">{{userst.name}}</a>
+                                                <a style="cursor: pointer;" (click)="startChat(userst.id)" class="text-reset"> {{userst.name}}</a>
                                             </h6>
                                             
                                             <div *ngIf="user.perfil == 'Patrocinador'">
-                                                <p *ngIf="userst.usr_datos_personales == 1"  class="text-muted mb-0">{{userst.usr_empresa}}</p>
+                                                <p *ngIf="userst.usr_datos_personales == 1"  class="text-muted mb-0"> {{userst.usr_empresa}}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -1018,7 +1018,23 @@
                     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-dialog-zoom">
                         <div class="modal-content">
                         <div class="modal-header">
-                            
+                            <div class="col-12">  <!--Cambio de p-2 a col-12 para el ancho del buscar-->
+
+                                <h5 class="modal-title" id="chatActivosLabel">Chats Activos</h5>
+                                <br>
+                                <div class="input-group input-group-sm custom-size">
+
+                                    <input type="text" class="form-control basicAutoComplete" autocomplete="on" [(ngModel)]="searchText" placeholder="Buscar...">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                                            </svg> <!-- Icono de lupa -->
+                                        </span>
+                                    </div>
+                                </div>
+
+                        </div>                           
                             <div class="modal-body p-0 hide-scrollbar">
                                 <div class="row">
                                   <div class="col-12">
