--- a/src/app/demo/view/evento.component.html
+++ b/src/app/demo/view/evento.component.html
@@ -18,8 +18,11 @@
 							<div class="store-card-content" style="text-align: justify; padding: 15px;" *ngIf="evento.eve_resumen!=null">
 								<span><p *ngFor="let linea of evento.eve_resumen.split('\n')">{{ linea }}</p></span>	
 								<br>
-								<a href="#/chat/{{evento.eve_orden}}" *ngIf="evento.eve_orden!=null"><span><i class="pi pi-send"></i> Preguntas - Chat</span></a>
-							</div>
+								<a href="#/chat/{{evento.eve_orden}}" style="cursor: pointer; text-decoration: none;" *ngIf="evento.eve_orden!=null">
+									<span>
+										<h4><i class="pi pi-send"></i> Preguntas - Chat</h4>
+									</span>
+								</a>
                         </div>	
 					</div>
 				</div>
