--- a/src/app/demo/view/agenda.component.html
+++ b/src/app/demo/view/agenda.component.html
@@ -1,7 +1,7 @@
 <div class="grid p-fluid">
     <div class="col-12">
 		<div class="text-center" style="color:#00A79D;">
-			<h6><a href="https://www.hidrogenocolombia.com/wp-content/uploads/2024/04/AGENDA-3°-INTERNATIONAL-HYDROGEN-CONGRESS-V5.pdf" target="_blank" style="color:#3CCA00;">Versión en Inglés</a></h6>
+			<h6><a href="https://www.hidrogenocolombia.com/wp-content/uploads/2024/04/AGENDA-3°-CONGRESO-INTERNACIONAL-DE-HIDROGENO-V6.pdf" target="_blank" style="color:#3CCA00;">Versión en Inglés</a></h6>
 		</div>	
 		<hr>
 		<div class="text-center" style="color:#00A79D;">
@@ -27,6 +27,25 @@
 				</ng-template>
 			</p-table>          
         </div>
+		<h5>Cápsulas de Conocimiento</h5>
+		<p-table [value]="listaAgenda2" sortMode="single">
+			<ng-template pTemplate="body" let-agenda let-rowIndex="rowIndex">
+				<tr>
+					<td  style="width: 15%;">
+						<a (click)="irAPaginaDestino(agenda.eve_id)">
+							{{agenda.eve_hora}}
+						</a>
+					</td>
+					<td>
+						<a (click)="irAPaginaDestino(agenda.eve_id)">
+							<!--<div  style="color:#00A79D;" [innerHTML]><b>{{agenda.eve_tipo}}</b></div>-->
+							{{agenda.eve_descripcion}}
+						</a>
+					</td>
+				</tr>
+			</ng-template>
+		</p-table>          
+	</div>		
 <!--         <div class="card">
             <h5>Dia 2 - Abril 21</h5>
             <p-table [value]="listaAgenda2" sortMode="single" >
