--- a/src/app/demo/view/agenda.component.html
+++ b/src/app/demo/view/agenda.component.html
@@ -27,9 +27,9 @@
 				</ng-template>
 			</p-table>          
         </div>
-        <div class="card"></div>		
-			<h5>Cápsulas de Conocimiento</h5>
-			<p-table [value]="listaAgenda2" sortMode="single">
+        <div class="card">
+            <h5>Cápsulas de Conocimiento</h5>
+            <p-table [value]="listaAgenda2" sortMode="single">
 				<ng-template pTemplate="body" let-agenda let-rowIndex="rowIndex">
 					<tr>
 						<td  style="width: 15%;">
@@ -39,14 +39,14 @@
 						</td>
 						<td>
 							<a (click)="irAPaginaDestino(agenda.eve_id)">
-								<!--<div  style="color:#00A79D;" [innerHTML]><b>{{agenda.eve_tipo}}</b></div>-->
+								
 								{{agenda.eve_descripcion}}
 							</a>
 						</td>
 					</tr>
 				</ng-template>
 			</p-table>          
-		</div>		
+        </div>		
 <!--         <div class="card">
             <h5>Dia 2 - Abril 21</h5>
             <p-table [value]="listaAgenda2" sortMode="single" >
