Ajustes para congreso 2025

--- a/src/app/demo/view/acercade.component.html
+++ b/src/app/demo/view/acercade.component.html
@@ -9,11 +9,11 @@
                             <h5>INFO</h5>
                         </div>
                         <h6>Acerca del evento</h6>
-                        <p style="text-align: justify;">Es tiempo de dar el siguiente paso en el desarrollo del ecosistema del Hidrógeno y empezar a materializar todos nuestros objetivos. 
-                            El tercer Congreso Internacional de Hidrógeno – del sueño a la realidad, será un espacio de relacionamiento y construcción 
-                            conjunta entre tomadores de decisiones y expertos del sector público, empresarial, financiero y académico nacional e internacional. 
-                            Tres días donde se presentará el avance de Colombia, la región y el mundo a través de apasionantes conferencias magistrales, paneles de discusión, 
-                            muestra comercial y actividades de networking.</p><br />
+                        <p style="text-align: justify;">La cuarta edición del Congreso Internacional de Hidrógeno, que se celebrará el 1 y 2 de abril de 2025 en el Hotel Grand Hyatt Bogotá, 
+                            es el punto de encuentro clave para impulsar el desarrollo del hidrógeno en Colombia. El evento reunirá a líderes de la industria, gobierno, academia, 
+                            inversionistas y organizaciones clave para presentar proyectos innovadores y discutir estrategias que fomenten la demanda en sectores críticos como los biocombustibles, 
+                            fertilizantes, transporte y energía. Con un enfoque regional y espacios para networking, el congreso busca adaptar el avance del hidrógeno a las necesidades locales, 
+                            promoviendo la colaboración y consolidando una economía sostenible basada en esta fuente de energía limpia.</p><br />
                             <div class="grid link">
                                 <div class="col-9">
                                     <a href="https://hidrogenocolombia.com" target="_blank">
