--- a/src/app/demo/view/agenda.component.html
+++ b/src/app/demo/view/agenda.component.html
@@ -1,11 +1,11 @@
 <div class="grid p-fluid">
     <div class="col-12">
 		<div class="text-center" style="color:#00A79D;">
-			<h6><a href="https://www.hidrogenocolombia.com/wp-content/uploads/2024/04/AGENDA-3°-CONGRESO-INTERNACIONAL-DE-HIDROGENO-V6.pdf" target="_blank" style="color:#3CCA00;">Versión en Inglés</a></h6>
+			<h6><a href="https://hidrogenocolombia.com/wp-content/uploads/2025/02/AGENDA-4TA-INTERNATIONAL-HYDROGEN-CONGRESS-v2.pdf" target="_blank" style="color:#1d7d9d;">Versión en Inglés</a></h6>
 		</div>	
 		<hr>
-		<div class="text-center" style="color:#00A79D;">
-			<h6><a href="#/pages/agenda/1" style="color:#00A79D;">Abril 9</a>  |  <a href="#/pages/agenda/2" style="color:#00A79D;">Abril 10</a>  |  <a href="#/pages/agenda/3" style="color:#00A79D;">Abril 11</a></h6>
+		<div class="text-center" style="color:#01ada0;">
+			<h6><a href="#/pages/agenda/1" style="color:#01ada0;">Abril 1</a>  |  <a href="#/pages/agenda/2" style="color:#01ada0;">Abril 2</a></h6>
 		</div>
         <div class="card">
             <h5>{{dia}}</h5>
