--- a/src/assets/layout/css/blue/layout-light.css
+++ b/src/assets/layout/css/blue/layout-light.css
@@ -9292,28 +9292,28 @@ a {
   /* ie6-9 */
  }
  .widget-overview-box.overview-box-1hidrogeno {
-  background-image: url('../../images/back1.webp');
+  background-image: url('../../images/back1_2025.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
   border: 1px solid #01ada0;
  }
  .widget-overview-box.overview-box-2hidrogeno {
-  background-image: url('../../images/back2.webp');
+  background-image: url('../../images/back2_2025.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
   border: 1px solid #01ada0;
  }
  .widget-overview-box.overview-box-3hidrogeno {
-  background-image: url('../../images/back3.webp');
+  background-image: url('../../images/back3_2025.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
   border: 1px solid #01ada0;
  }   
  .widget-overview-box.overview-box-4hidrogeno {
-  background-image: url('../../images/back4.webp');
+  background-image: url('../../images/back4_2025.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
@@ -9479,7 +9479,8 @@ a {
 }
 .widget-news .news-row .news.news-2 {
  /*  background-image: url("../../images/dashboard/news-2.png"); */
-  background-image: url("../../images/dashboard/news-empty2.webp");
+  background-image: url("../../images/dashboard/news-empty-2025.webp");
+  background-position: center bottom;
   border: 1px solid #01ada0;
 }
 .widget-news .news-row .news.news-2 .news-title {
