Ajuste fondo botones

--- a/src/assets/layout/css/blue/layout-light.css
+++ b/src/assets/layout/css/blue/layout-light.css
@@ -9292,28 +9292,28 @@ a {
   /* ie6-9 */
  }
  .widget-overview-box.overview-box-1hidrogeno {
-  background-image: url('../../images/back1_2025.webp');
+  background-image: url('../../images/back1.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
   border: 1px solid #01ada0;
  }
  .widget-overview-box.overview-box-2hidrogeno {
-  background-image: url('../../images/back2_2025.webp');
+  background-image: url('../../images/back2.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
   border: 1px solid #01ada0;
  }
  .widget-overview-box.overview-box-3hidrogeno {
-  background-image: url('../../images/back3_2025.webp');
+  background-image: url('../../images/back3.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
   border: 1px solid #01ada0;
  }   
  .widget-overview-box.overview-box-4hidrogeno {
-  background-image: url('../../images/back4_2025.webp');
+  background-image: url('../../images/back4.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
