--- a/src/app/demo/view/sponsors.component.html
+++ b/src/app/demo/view/sponsors.component.html
@@ -79,6 +79,26 @@
 			</div>
 		</div>		
 	</div>
+	<div class="col-12" *ngIf="verexpositores">
+		<div class="card widget-store-items">
+            <div class="grid grid-nogutter">
+                <div class="col-12 title">
+                    <h5>Expositores</h5>
+                </div>
+            </div>			
+			<div class="store-cards-container" >
+				<div class="grid store-cards">
+					<div class="col-6 lg:col-2 md:col-2" *ngFor="let sponsor of listaExpositores">
+                        <div class="store-card" (click)="irAPaginaDestino(sponsor.spo_id)">
+							<div class="store-card-image">
+								<img src="assets/media/sponsors/{{sponsor.spo_logo}}" alt="mirage-layout" />
+							</div>	
+                        </div>	
+					</div>
+				</div>
+			</div>
+		</div>		
+	</div>	
 	<div class="col-12" *ngIf="versponsors1">
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
