--- a/src/app/demo/view/sponsors.component.html
+++ b/src/app/demo/view/sponsors.component.html
@@ -3,7 +3,7 @@
 		<div class="card widget-store-items">
             <div class="grid grid-nogutter">
                 <div class="col-12 title">
-                    <h5>Patrocinador oficial</h5>
+                    <h5>Aliado oficial</h5>
                 </div>
             </div>			
 			<div class="store-cards-container" >
